Fixed topbars responsiveness on mobile

--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -66,6 +66,30 @@
     color: #333;
 }
 
+.align {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 768px) {
+    .profileName {
+        display: none;
+    }
+
+    .topBar {
+        gap: 1.0rem;
+    }
+
+    .align {
+        display: flex;
+        flex: 1 1 0%;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 0.5rem;
+    }
+}
+
 .avatar {
     width: 42px;
     height: 42px;
